--- a/css/home.css
+++ b/css/home.css
@@ -76,25 +76,22 @@
   background-color: #ddd;
 }
 
-.slider-section .slider-container {
+.slider__something {
   width: 100%;
   height: 100px;
   border: 1px solid white;
+  color: white;
 }
 
-.opinion-section {
+.opinion {
   margin-top: 50px;
   margin-bottom: 50px;
   color: rgb(236, 237, 238);
 }
-.opinion-section .opinion-header-title h1 {
-  font-size: 70px;
+.opinion__heading {
+  font-size: 40px;
 }
-.opinion-section .opinion-header-title p {
-  font-size: 20px;
-  padding-top: 10px;
-}
-.opinion-section .opinion-container {
+.opinion__clients-list {
   margin-top: 10px;
   width: 100%;
   height: auto;
@@ -103,7 +100,7 @@
   align-items: center;
   flex-wrap: wrap;
 }
-.opinion-section .opinion-container .client-opinion {
+.opinion__client-rating {
   width: 550px;
   height: 70%;
   margin-right: 50px;
@@ -116,73 +113,31 @@
   border: 1px solid #bfa182;
   border-radius: 8%;
 }
-.opinion-section .opinion-container .client-opinion .testimonials-rating {
+.opinion__stars {
   margin: 0px 0px 40px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
   font-size: 1.2rem;
 }
-.opinion-section .opinion-container .client-opinion .testimonials-content {
+.opinion__testimonials {
   margin: 0px 0px 12px;
   font-size: 1.875rem;
 }
-.opinion-section .opinion-container .client-opinion .testimonial-info {
+.opinion__line {
   border-top: 1px solid rgb(236, 237, 238);
   margin: 22px 0px 0px;
   padding: 22px 0px 0px;
 }
-.opinion-section .opinion-container .client-opinion .testimonials-author {
+.opinion__testimonials-author {
   color: rgba(0, 0, 0, 0.6);
   color: #bfa182;
 }
-.opinion-section .opinion-container .client-opinion .annotation-content-author {
+.opinion__annotation {
   height: 30%;
   padding: 30px 0px;
 }
-.opinion-section .opinion-container .client-opinion .annotation-content-author .author {
+.opinion__annotation .author {
   color: rgba(0, 0, 0, 0.6);
   color: #bfa182;
-}
-
-.job-offers {
-  margin-bottom: 30px;
-}
-.job-offers .job-offers-container .job-offers-picture img {
-  width: 100%;
-  height: 100%;
-  border: 0.4px solid rgb(236, 237, 238);
-}
-.job-offers .job-offers-container .job-offers-table table,
-.job-offers .job-offers-container .job-offers-table tr,
-.job-offers .job-offers-container .job-offers-table td {
-  width: 100%;
-  line-height: 350%;
-  color: rgb(236, 237, 238);
-  font-size: 15px;
-}
-.job-offers .job-offers-container .job-offers-table table tr,
-.job-offers .job-offers-container .job-offers-table tr tr,
-.job-offers .job-offers-container .job-offers-table td tr {
-  height: 20%;
-}
-.job-offers .job-offers-container .job-offers-table table td,
-.job-offers .job-offers-container .job-offers-table tr td,
-.job-offers .job-offers-container .job-offers-table td td {
-  width: 33.3%;
-  border-bottom: 0.5px solid black;
-}
-.job-offers .job-offers-container .job-offers-table table .job-name,
-.job-offers .job-offers-container .job-offers-table tr .job-name,
-.job-offers .job-offers-container .job-offers-table td .job-name {
-  text-transform: uppercase;
-  font-weight: bold;
-  transition: 300ms;
-  font-size: 18px;
-}
-.job-offers .job-offers-container .job-offers-table table em,
-.job-offers .job-offers-container .job-offers-table tr em,
-.job-offers .job-offers-container .job-offers-table td em {
-  color: rgb(238, 211, 147);
-  font-size: 12px;
 }/*# sourceMappingURL=home.css.map */
