--- a/scss/home.scss
+++ b/scss/home.scss
@@ -86,125 +86,79 @@
 }
 
 // 2 sekcja => prezentacja
-.slider-section {
-	.slider-container {
+.slider {
+	&__something {
 		width: 100%;
 		height: 100px;
 		border: 1px solid white;
+		color: white;
 	}
 }
+
 // 3 sekcja -> opinie klientów
-.opinion-section {
+.opinion {
 	margin-top: 50px;
 	margin-bottom: 50px;
 	color: rgb(236, 237, 238);
-	.opinion-header-title {
-		h1 {
-			font-size: 70px;
-		}
-		p {
-			font-size: 20px;
-			padding-top: 10px;
-		}
+
+	&__heading {
+		font-size: 40px;
 	}
-	.opinion-container {
+
+	&__clients-list {
 		margin-top: 10px;
 		width: 100%;
 		height: auto;
 		display: flex;
-		justify-content: center
-		;
+		justify-content: center;
 		align-items: center;
-		flex-wrap: wrap;
-		// border: 0.4px solid rgb(236, 237, 238);
-		.client-opinion {
-			width: 550px;
-			// height: auto;
-			height: 70%;
-			margin-right: 50px;
-			margin-bottom: 50px;
-			padding: 50px;
-			padding-bottom: 0px;
-			display: flex;
-			flex-direction: column;
-			background: rgba(0, 0, 0, 0.15);
-			border: 1px solid #bfa182;
-			border-radius: 8%;
-			.testimonials-rating {
-				margin: 0px 0px 40px;
-				display: flex;
-				justify-content: flex-start;
-				align-items: center;
-				font-size: 1.2rem;
-			}
-			.testimonials-content {
-				margin: 0px 0px 12px;
-				font-size: 1.875rem;
-			}
-			// line
-			.testimonial-info {
-				border-top: 1px solid rgb(236, 237, 238);
-				margin: 22px 0px 0px;
-				padding: 22px 0px 0px;
-			}
-			.testimonials-author {
-				color: rgba(0, 0, 0, 0.6);
-				color: #bfa182;
-			}
-			.annotation-content-author {
-				// display: flex;
-				// flex-direction: column;
-				// justify-content: flex-end;
-				height: 30%;
-				// margin: 55px -32px -43px;
-				padding: 30px 0px;
-
-				.author {
-					color: rgba(0, 0, 0, 0.6);
-					color: #bfa182;
-				}
-			}
-		}
+		flex-wrap: wrap;	
 	}
-}
-// 4 sekcja -> oferty pracy
-.job-offers {
-	margin-bottom: 30px;
-	.job-offers-container {
-		.job-offers-picture {
-			img {
-				width: 100%;
-				height: 100%;
-				border: 0.4px solid rgb(236, 237, 238);
-			}
-		}
-		.job-offers-table {
-			table,
-			tr,
-			td {
-				width: 100%;
-				line-height: 350%;
-				color: rgb(236, 237, 238);
-				font-size: 15px;
-				tr {
-					height: 20%;
-				}
-				td {
-					width: 33.3%;
-					border-bottom: 0.5px solid black;
-				}
-				.job-name {
-					text-transform: uppercase;
-					font-weight: bold;
-					transition: 300ms;
-					font-size: 18px;
-				}
 
-				em {
-					color: rgb(238, 211, 147);
-					font-size: 12px;
-				}
-			}
+	&__client-rating {
+		width: 550px;
+		// height: auto;
+		height: 70%;
+		margin-right: 50px;
+		margin-bottom: 50px;
+		padding: 50px;
+		padding-bottom: 0px;
+		display: flex;
+		flex-direction: column;
+		background: rgba(0, 0, 0, 0.15);
+		border: 1px solid #bfa182;
+		border-radius: 8%;
+	}
+	&__stars {
+		margin: 0px 0px 40px;
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
+		font-size: 1.2rem;
+	}
+
+	&__testimonials {
+		margin: 0px 0px 12px;
+		font-size: 1.875rem;
+	}
+
+	&__line {
+		border-top: 1px solid rgb(236, 237, 238);
+		margin: 22px 0px 0px;
+		padding: 22px 0px 0px;
+	}
+
+	&__testimonials-author {
+		color: rgba(0, 0, 0, 0.6);
+		color: #bfa182;
+	}
+
+	&__annotation {
+		height: 30%;
+		padding: 30px 0px;
+		.author {
+			color: rgba(0, 0, 0, 0.6);
+			color: #bfa182;
 		}
 	}
 }
