--- a/css/main.css
+++ b/css/main.css
@@ -68,34 +68,46 @@ body {
   text-transform: uppercase;
   text-decoration: none;
   color: #000;
+  transition: color 0.1s;
+}
+.nav__item:hover {
+  color: #ffcc80;
+  color: #f1bd52;
 }
 .nav__anchors {
   display: flex;
 }
+.nav .burger-icon {
+  font-size: 40px;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
 
 .header {
-  max-width: 100vw;
+  max-width: 100%;
   max-height: 100vh;
+  width: 100%;
+}
+.header__shadow {
+  top: 0;
+  background: rgba(0, 0, 0, 0.5);
   width: 100%;
 }
 .header__video {
   width: 100%;
   height: 100vh;
-  z-index: 10;
   -o-object-fit: cover;
      object-fit: cover;
   border: 0.4px solid rgb(236, 237, 238);
   border-top: none;
 }
-.header__title {
-  position: absolute;
-  top: 10em;
-  left: 10em;
-  z-index: 100;
-  background: rgba(0, 0, 0, 0.5);
-}
-.header__title .logo {
-  font-size: 18rem;
+.header__img {
+  display: none;
+  width: 100%;
+  height: 100vh;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .header__promotion {
   position: absolute;
@@ -213,7 +225,7 @@ body {
 }
 
 .about {
-  width: 100%;
+  width: 100vw;
   height: 660px;
   margin-top: 3%;
   display: flex;
@@ -747,4 +759,36 @@ textarea {
 }
 .footer__anchors {
   display: flex;
+}
+
+@media (max-width: 767px) {
+  .nav .anchor {
+    display: none;
+  }
+  .nav .burger-icon {
+    display: flex;
+  }
+  .header__video {
+    display: none;
+  }
+  .header__img {
+    display: block;
+    border: 0.4px solid rgb(236, 237, 238);
+  }
+  .header__title {
+    position: absolute;
+    top: 5em;
+    left: 5em;
+    z-index: 100;
+    background: none;
+  }
+  .header__title .logo {
+    font-size: 12rem;
+    color: #ffcc80;
+  }
+}
+@media (min-width: 768px) {
+  .nav .burger-icon {
+    display: none;
+  }
 }/*# sourceMappingURL=main.css.map */
