--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,8 +1,6 @@
-// #724e2b;
-// #BFA182; 
-// #ffcc80;
-// #e9c19c;
-
-// #f1bd52  - h1
-
-// rgb(236, 237, 238);
+$brown: #724e2b;
+$white:  rgb(236, 237, 238);
+$cocoa: #BFA182;
+$skin: #e9c19c;
+$creamy:#ffcc80; 
+$special-cream: #f1bd52;
