navigation for mobile

--- a/scss/large.scss
+++ b/scss/large.scss
@@ -1,9 +1,58 @@
 @media (min-width: 768px) {
-    .nav {
-        .burger-icon {
-            display: none;
-        }
+  .nav-mobile {
+    display: none;
+  }
+
+  // NAV
+  .nav-desktop {
+    width: 100vw;
+    // height: auto;
+    position: fixed;
+    top: 0;
+    z-index: 100;
+    width: 100%;
+    background-color: #b89b7e;
+    border: 1px solid white;
+
+    &__item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-weight: bold;
+      text-transform: uppercase;
+      text-decoration: none;
+      color: #000;
+
+      padding: 0.2em 1em;
+      // font-size: 1.8rem;
     }
 
-    
+    &__logo {
+      font-size: 6rem;
+      font-family: "Caveat", cursive;
+      font-weight: normal;
+      text-transform: lowercase;
+      color: rgb(241, 189, 82);
+    }
+
+    &__logo::first-letter {
+      text-transform: uppercase;
+    }
+
+
+    &__anchors {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+  &__item {
+    transition: color 0.1s;
+  }
+
+  &__item:hover {
+    color: #ffcc80;
+    color: #f1bd52;
+  }
 }
