--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,11 @@ body {
 }
 
 .logo {
+  width: 20%;
   font-size: 5rem;
+}
+.logo a {
+  padding: 10px 20px;
   font-family: "Caveat", cursive;
   font-weight: normal;
   text-transform: lowercase;
@@ -47,41 +51,6 @@ body {
 
 .logo::first-letter {
   text-transform: uppercase;
-}
-
-.nav {
-  position: fixed;
-  top: 0;
-  z-index: 100;
-  width: 100%;
-  background-color: #b89b7e;
-  border: 1px solid white;
-}
-.nav__item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: white;
-  padding: 0.2em 1em;
-  font-size: 1.8rem;
-  font-weight: bold;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: #000;
-  transition: color 0.1s;
-}
-.nav__item:hover {
-  color: #ffcc80;
-  color: #f1bd52;
-}
-.nav__anchors {
-  display: flex;
-}
-.nav .burger-icon {
-  font-size: 40px;
-  background: none;
-  border: none;
-  cursor: pointer;
 }
 
 .header {
@@ -762,11 +731,59 @@ textarea {
 }
 
 @media (max-width: 767px) {
-  .nav .anchor {
+  .nav-desktop {
     display: none;
   }
-  .nav .burger-icon {
+  .nav-mobile {
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    z-index: 100;
+    width: 100%;
+    background-color: #b89b7e;
+    border: 1px solid white;
+  }
+  .nav-mobile__item {
     display: flex;
+    justify-content: space-between;
+    font-size: 1.8rem;
+    z-index: 100000;
+  }
+  .nav-mobile .logo {
+    position: absolute;
+    right: 12rem;
+  }
+  .nav-mobile .burger-icon {
+    padding: 10px 20px;
+    transition: transform 0.3s;
+  }
+  .nav-mobile .burger-icon {
+    font-size: 5rem;
+    background: none;
+    border: none;
+    cursor: pointer;
+  }
+  nav div ul {
+    position: absolute;
+    height: 100vh;
+    width: 250px;
+    left: -251px;
+    list-style: none;
+    background-color: red;
+    transition: transform 0.3s;
+    z-index: 11000000;
+  }
+  nav ul li a {
+    font-weight: bold;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #000;
+  }
+  .active-menu {
+    transform: translateX(249px);
+  }
+  .hide {
+    display: none;
   }
   .header__video {
     display: none;
@@ -782,13 +799,39 @@ textarea {
     z-index: 100;
     background: none;
   }
-  .header__title .logo {
-    font-size: 12rem;
-    color: #ffcc80;
-  }
 }
 @media (min-width: 768px) {
-  .nav .burger-icon {
+  .nav-mobile {
     display: none;
+  }
+  .nav-desktop {
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    z-index: 100;
+    width: 100%;
+    background-color: #b89b7e;
+    border: 1px solid white;
+  }
+  .nav-desktop__item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #000;
+    padding: 0.2em 1em;
+  }
+  .nav-desktop__logo {
+    font-size: 150px;
+    font-weight: normal;
+    text-transform: lowercase;
+    color: rgb(241, 189, 82);
+  }
+  .nav-desktop__anchors {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }/*# sourceMappingURL=main.css.map */
