--- a/scss/main.scss
+++ b/scss/main.scss
@@ -41,61 +41,21 @@ body {
 }
 
 .logo {
+  width: 20%;
   font-size: 5rem;
-  font-family: "Caveat", cursive;
-  font-weight: normal;
-  text-transform: lowercase;
-  color: rgb(241, 189, 82);
+  a {
+    padding: 10px 20px;
+    font-family: "Caveat", cursive;
+    font-weight: normal;
+    text-transform: lowercase;
+    color: rgb(241, 189, 82);
+  }
 }
+
+
 
 .logo::first-letter {
   text-transform: uppercase;
-}
-
-.main {
-}
-
-// NAV
-.nav {
-  position: fixed;
-  top: 0;
-  z-index: 100;
-  width: 100%;
-  background-color: #b89b7e;
-  border: 1px solid white;
-  //   height: 100vh; na mobile odkomentować
-  // transform: translateX(100%);
-  &__item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: white;
-    // margin: 0.5em 0;
-    padding: 0.2em 1em;
-    font-size: 1.8rem;
-    font-weight: bold;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: #000;
-    // color: #ffcc80;
-    transition: color 0.1s;
-  }
-
-  &__item:hover {
-    color: #ffcc80;
-    color: #f1bd52;
-  }
-
-  &__anchors {
-    display: flex;
-  }
-  .burger-icon {
-    // display: none;
-    font-size: 40px;
-    background: none;
-    border: none;
-    cursor: pointer;
-  }
 }
 
 // HOME
@@ -815,7 +775,7 @@ textarea {
   background-color: #b89b7e;
   border: 1px solid white;
   // height: 100vh; na mobile odkomentować
-  // transform: translateX(100%);
+
   &__item {
     display: flex;
     justify-content: space-between;
