--- a/css/large.css
+++ b/css/large.css
@@ -14,22 +14,34 @@
   .nav-desktop__item {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    font-size: 2rem;
     font-weight: bold;
     text-transform: uppercase;
     text-decoration: none;
     color: #000;
-    padding: 0.2em 1em;
+    padding: 0 0.8em;
+    font-size: 1.8rem;
   }
   .nav-desktop__logo {
-    font-size: 150px;
+    font-size: 6rem;
+    font-family: "Caveat", cursive;
     font-weight: normal;
     text-transform: lowercase;
     color: rgb(241, 189, 82);
+  }
+  .nav-desktop__logo::first-letter {
+    text-transform: uppercase;
   }
   .nav-desktop__anchors {
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+  .nav-desktop__item {
+    transition: color 0.1s;
+  }
+  .nav-desktop__item:hover {
+    color: #ffcc80;
+    color: #f1bd52;
   }
 }/*# sourceMappingURL=large.css.map */
