--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,10 @@ body {
   background-color: #724e2b;
 }
 
+a {
+  text-decoration: none;
+}
+
 #about,
 #menu,
 #contact,
@@ -40,9 +44,10 @@ body {
 .logo {
   width: 20%;
   font-size: 5rem;
+  margin-top: 0.7rem;
 }
 .logo a {
-  padding: 10px 20px;
+  padding: 0 2rem;
   font-family: "Caveat", cursive;
   font-weight: normal;
   text-transform: lowercase;
@@ -326,15 +331,6 @@ body {
 .members__member img {
   width: 100%;
   height: 80%;
-}
-
-.header {
-  position: -webkit-sticky;
-  position: sticky;
-}
-
-* {
-  text-decoration: none;
 }
 
 .fa-leaf {
@@ -730,6 +726,11 @@ textarea {
   display: flex;
 }
 
+@media (max-width: 576px) {
+  div {
+    width: 100px;
+  }
+}
 @media (max-width: 767px) {
   .nav-desktop {
     display: none;
@@ -747,7 +748,7 @@ textarea {
     display: flex;
     justify-content: space-between;
     font-size: 1.8rem;
-    z-index: 100000;
+    z-index: 1001;
   }
   .nav-mobile .logo {
     position: absolute;
@@ -757,6 +758,14 @@ textarea {
     padding: 10px 20px;
     transition: transform 0.3s;
   }
+  .nav-mobile__anchors {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    transition: transform 0.3s;
+  }
   .nav-mobile .burger-icon {
     font-size: 5rem;
     background: none;
@@ -764,14 +773,17 @@ textarea {
     cursor: pointer;
   }
   nav div ul {
+    padding-top: 50px;
     position: absolute;
     height: 100vh;
     width: 250px;
     left: -251px;
     list-style: none;
-    background-color: red;
+    background-color: #ffcc80;
+    border: 1px solid rgb(236, 237, 238);
+    border-top: none;
     transition: transform 0.3s;
-    z-index: 11000000;
+    z-index: 11000;
   }
   nav ul li a {
     font-weight: bold;
@@ -779,18 +791,24 @@ textarea {
     text-decoration: none;
     color: #000;
   }
+  li {
+    padding: 3rem;
+  }
   .active-menu {
     transform: translateX(249px);
   }
   .hide {
     display: none;
   }
+  .header {
+    width: 100%;
+  }
   .header__video {
     display: none;
   }
   .header__img {
     display: block;
-    border: 0.4px solid rgb(236, 237, 238);
+    border: 0.4px solid white;
   }
   .header__title {
     position: absolute;
@@ -816,22 +834,34 @@ textarea {
   .nav-desktop__item {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    font-size: 2rem;
     font-weight: bold;
     text-transform: uppercase;
     text-decoration: none;
     color: #000;
-    padding: 0.2em 1em;
+    padding: 0 0.8em;
+    font-size: 1.8rem;
   }
   .nav-desktop__logo {
-    font-size: 150px;
+    font-size: 6rem;
+    font-family: "Caveat", cursive;
     font-weight: normal;
     text-transform: lowercase;
     color: rgb(241, 189, 82);
+  }
+  .nav-desktop__logo::first-letter {
+    text-transform: uppercase;
   }
   .nav-desktop__anchors {
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+  .nav-desktop__item {
+    transition: color 0.1s;
+  }
+  .nav-desktop__item:hover {
+    color: #ffcc80;
+    color: #f1bd52;
   }
 }/*# sourceMappingURL=main.css.map */
