--- a/scss/medium.scss
+++ b/scss/medium.scss
@@ -22,6 +22,7 @@
       font-size: 1.8rem;
       z-index: 1001;
     }
+
     .logo {
       position: absolute;
       right: 12rem;
@@ -63,8 +64,8 @@
     width: 250px;
     left: -251px;
     list-style: none;
-    background-color: $creamy;
-    border: 1px solid $white;
+    background-color: #ffcc80;
+    border: 1px solid white;
     border-top: none;
     transition: transform 0.3s;
     z-index: 11000;
@@ -90,23 +91,38 @@
   }
 
   .header {
-    width: 100%;
+    &__video {
+      display: none;
+    }
 
-  }
-  .header__video {
-    display: none;
-  }
+    &__img {
+      display: block;
+      border: 0.4px solid white;
+    }
 
-  .header__img {
-    display: block;
-    border: 0.4px solid white;
-  }
+    &__text-container {
+      width: 38rem;
+      margin-left: 2rem;
+      border-radius: 1rem;
+      background: rgba(0, 0, 0, 0.6);
+      border: 0.4px solid white;
+    }
 
-  .header__title {
-    position: absolute;
-    top: 5em;
-    left: 5em;
-    z-index: 100;
-    background: none;
+    &__heading {
+      margin-left: 2rem;
+      margin-top: 1rem;
+      font-size: 3.75rem;
+    }
+    &__text {
+      width: 90%;
+      margin-left: 2rem;
+      padding: 1rem 0;
+      font-size: 2.2rem;
+    }
+    &__link {
+      margin: 2rem 0;
+      margin-left: 2rem;
+    }
+
   }
 }
