--- a/css/main.css
+++ b/css/main.css
@@ -140,17 +140,77 @@ a {
 }
 
 .slider {
-  margin-top: 200px;
-}
-.slider__something {
-  width: 100%;
-  height: 100px;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
   border: 1px solid white;
+  background: rgba(0, 0, 0, 0.4);
+}
+.slider__title {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Caveat", cursive;
+  font-size: 5rem;
   color: white;
+}
+.slider__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 3.5rem;
+  min-height: 50vh;
+  position: relative;
+}
+.slider i {
+  top: 50%;
+  height: 4.6rem;
+  width: 4.6rem;
+  position: absolute;
+  line-height: 4.6rem;
+  text-align: center;
+  font-size: 1.2rem;
+  background: #fff;
+  border-radius: 50%;
+  cursor: pointer;
+  transform: translateY(-50%);
+}
+.slider i:first-child {
+  left: -2.3rem;
+}
+.slider i:last-child {
+  right: -2.3rem;
+}
+.slider__slides {
+  font-size: 0;
+  cursor: pointer;
+  overflow: hidden;
+  white-space: nowrap;
+  scroll-behavior: smooth;
+}
+.slider__slides img {
+  height: 34rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-left: 1.4rem;
+  border-radius: 8rem;
+  width: 33.3333333333%;
+}
+.slider__slides img:first-child {
+  margin-left: 0;
+}
+.slider__slides.dragging {
+  cursor: -webkit-grab;
+  cursor: grab;
+  scroll-behavior: auto;
+}
+.slider__slides.dragging img {
+  pointer-events: none;
 }
 
 .opinion {
-  margin-top: 50px;
+  margin-top: auto;
   margin-bottom: 50px;
   color: rgb(236, 237, 238);
 }
@@ -158,7 +218,7 @@ a {
   font-size: 40px;
 }
 .opinion__clients-list {
-  margin-top: 10px;
+  margin-top: auto;
   width: 100%;
   height: auto;
   display: flex;
@@ -208,537 +268,51 @@ a {
   color: #bfa182;
 }
 
-.about {
-  width: 100vw;
-  height: 660px;
-  margin-top: 3%;
-  display: flex;
-  background: rgba(0, 0, 0, 0.25);
-  justify-content: space-around;
-  color: #ddd;
-  align-items: center;
-  border: 1px solid #ddd;
-}
-.about__text-container {
-  padding: 2%;
-  flex-direction: column;
-  width: 50%;
-  height: 90%;
-}
-.about__title {
-  height: 20%;
-  padding-left: 4%;
-}
-.about__top-text {
-  color: #e9c19c;
-  font-size: 28px;
-}
-.about__middle-text {
-  font-weight: bolder;
-  font-size: 38px;
-  color: rgb(224, 224, 224);
-}
-.about__description {
-  padding: 2%;
-  height: 60%;
-}
-.about__description p {
-  padding: 2%;
-  font-size: 19px;
-}
-.about__read-more-btn {
-  height: 20%;
-  padding-left: 2%;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-.about__read-more-btn .btn {
-  width: 40%;
-  height: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 22px;
-  text-align: center;
-  font-weight: bold;
-  text-decoration: none;
-  border: 1px solid black;
-  color: #ddd;
-  background-color: #724e2b;
-  border-radius: 20%;
-  transition: background-color 300ms;
-  cursor: pointer;
-}
-.about__read-more-btn .btn:hover {
-  color: #724e2b;
-  background-color: #ddd;
-}
-.about__photo {
-  width: 40%;
-  height: 70%;
-  border-radius: 50%;
-}
-.about__photo img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  border-radius: 50%;
-}
-
-.short-info {
-  margin-top: 80px;
-  padding: 15px 30px;
-  border: 0.5px solid white;
-  color: white;
-  background: rgba(0, 0, 0, 0.25);
-}
-
-.info {
-  padding: 0 0px;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: 1fr;
-}
-.info__element {
-  padding: auto;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-}
-.info__icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 50px;
-}
-.info__text {
-  text-align: center;
-}
-
-.members {
-  margin-top: 80px;
-  margin-bottom: 80px;
-  border: 1px solid white;
-  background: rgba(0, 0, 0, 0.25);
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-.members__heading {
-  width: 100%;
-}
-.members__member {
-  margin: 50px;
-  width: 40%;
-  border: 1px solid white;
-}
-.members__member p {
-  color: white;
-}
-.members__member img {
-  width: 100%;
-  height: 80%;
-}
-
-.fa-leaf {
-  color: rgb(28, 238, 28);
-}
-
-.fa-pepper-hot {
-  color: rgb(230, 36, 36);
-}
-
-.fa-fish {
-  color: rgb(83, 124, 245);
-}
-
-.menu-section .menu-container {
-  margin-top: 3%;
-}
-.menu-section .menu-container .menu-header {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 15vh;
-}
-.menu-section .menu-container .menu-header p {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.menu-section .menu-container .menu-header .p1 {
-  font-style: italic;
-  color: #e9c19c;
-  font-size: 28px;
-}
-.menu-section .menu-container .menu-header .p2 {
-  font-weight: bolder;
-  font-size: 34px;
-  color: rgb(224, 224, 224);
-}
-.menu-section .menu-container .menu-header .p3 {
-  padding-top: 1.5%;
-  font-size: 15px;
-}
-.menu-section .menu-container .menu-list {
-  width: 100%;
-  height: 10vh;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-.menu-section .menu-container .menu-list a {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-size: 25px;
-  font-weight: bold;
-  transition: color 300ms;
-  color: #ddd;
-}
-.menu-section .menu-container .menu-list a:hover {
-  color: red;
-}
-.menu-section .menu-container .pizza-choice {
-  width: 100%;
-  height: 150vh;
-  display: flex;
-  flex-direction: column;
-}
-.menu-section .menu-container .pizza-choice .pizza-list {
-  width: 100%;
-  height: 10%;
-  padding: 1%;
-  display: flex;
-  justify-content: space-between;
-}
-.menu-section .menu-container .pizza-choice .pizza-list .pizza-name {
-  width: 50%;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-}
-.menu-section .menu-container .pizza-choice .pizza-list .pizza-name p {
-  font-size: 25px;
-  font-weight: bold;
-  color: #ddd;
-}
-.menu-section .menu-container .pizza-choice .pizza-list .pizza-name .components p {
-  width: 100%;
-  padding-top: 10px;
-  font-size: 18px;
-  font-weight: normal;
-  color: #e9c19c;
-}
-.menu-section .menu-container .pizza-choice .pizza-list .prices {
-  width: 25%;
-  height: auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.menu-section .menu-container .pizza-choice .pizza-list .prices p {
-  font-size: 20px;
-  color: #ddd;
-}
-.menu-section .menu-container .pizza-choice .pizza-list .btn {
-  width: 14%;
-  height: auto;
-  margin: 3%;
-  cursor: pointer;
-}
-
-.header {
-  position: -webkit-sticky;
-  position: sticky;
-}
-
-input:-moz-placeholder-shown {
-  font-style: italic;
-  font-size: 16px;
-  padding-left: 3%;
-}
-
-input:-ms-input-placeholder {
-  font-style: italic;
-  font-size: 16px;
-  padding-left: 3%;
-}
-
-input:placeholder-shown {
-  font-style: italic;
-  font-size: 16px;
-  padding-left: 3%;
-}
-
-.row {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-.row label {
-  font-size: 12px;
-  font-weight: bold;
-}
-.row input,
-.row select {
-  width: 95%;
-  height: 45px;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-textarea {
-  width: 100%;
-  height: 90%;
-  resize: none;
-}
-
-.contact-section {
-  margin-top: 3%;
-  color: #ddd;
-  font-size: 22px;
-}
-.contact-section .contact-header {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 15vh;
-}
-.contact-section .contact-header p {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.contact-section .contact-header .p1 {
-  font-style: italic;
-  color: #e9c19c;
-  font-size: 28px;
-}
-.contact-section .contact-header .p2 {
-  font-weight: bolder;
-  font-size: 38px;
-  color: rgb(224, 224, 224);
-}
-.contact-section .contact-header .p3 {
-  padding-top: 1.5%;
-  font-size: 15px;
-}
-.contact-section .contact-container {
-  background: rgba(0, 0, 0, 0.25);
-  width: 100%;
-  height: 775px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  border: 1px solid #ddd;
-}
-.contact-section .contact-container .map-container {
-  width: 50%;
-  height: 80%;
-  border: 1px solid #ddd;
-}
-.contact-section .contact-container .contact-info {
-  display: flex;
-  flex-direction: column;
-  padding: 2%;
-  width: 40%;
-  height: 80%;
-}
-.contact-section .contact-container .contact-info div {
-  width: 100%;
-  height: 25%;
-  margin: 3%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid white;
-  border-radius: 35%;
-}
-.contact-section .contact-container .contact-info .contact-social {
-  display: flex;
-  flex-direction: row;
-  text-decoration: none;
-}
-.contact-section .contact-container .contact-info .contact-social .fa-brands {
-  font-size: 60px;
-  color: #ddd;
-  transition: color 300ms, font-size 300ms;
-}
-.contact-section .contact-container .contact-info .contact-social .fa-brands:hover {
-  color: #e9ab4e;
-  font-size: 90px;
-}
-.contact-section .contact-container .contact-info .contact-social a {
-  padding: 2%;
-}
-
-.contact-form-section {
-  margin-top: 3%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #ddd;
-}
-.contact-form-section .contact-form-container {
-  width: 70%;
-  height: 1290px;
-  padding: 2em;
-  margin-bottom: 3%;
-  border: 1px solid #ddd;
-  background: rgba(0, 0, 0, 0.25);
-}
-.contact-form-section .contact-form-container .contact-form-text h1 {
-  font-size: 24px;
-}
-.contact-form-section .contact-form-container .contact-form-text p {
-  padding-top: 3%;
-  padding-bottom: 3%;
-  font-size: 17px;
-}
-.contact-form-section .contact-form-container .input-area-container {
-  display: flex;
-  width: 100%;
-  display: flex;
-  padding-bottom: 5%;
-}
-.contact-form-section .contact-form-container .input-area-container .input-data-container {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-}
-.contact-form-section .contact-form-container .message-container {
-  display: flex;
-  flex-direction: column;
-  margin-left: 1%;
-  width: 100%;
-  height: 100%;
-}
-.contact-form-section .attachment-container {
-  width: 30%;
-  height: 100%;
-  margin: 5% 0;
-}
-.contact-form-section .attachment-container p {
-  width: 120%;
-  margin-bottom: 1.5%;
-  font-size: 18px;
-}
-.contact-form-section .attachment-container div {
-  font-weight: normal;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 230px;
-  height: 50px;
-  border: 1px solid #ddd;
-  border-radius: 10%;
-  color: #f1bd52;
-  transition: background 300ms, color 300ms;
-  cursor: pointer;
-}
-.contact-form-section .attachment-container div p {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 15px;
-}
-.contact-form-section .attachment-container div input {
-  display: none;
-}
-.contact-form-section .attachment-container div:hover {
-  background: rgba(0, 0, 0, 0.4);
-}
-.contact-form-section .kind-of-contact-container {
-  width: 100%;
-  height: auto;
-  padding-top: 4%;
-}
-.contact-form-section .kind-of-contact-container .p-above {
-  font-size: 20px;
-  padding-bottom: 10px;
-}
-.contact-form-section .kind-of-contact-container .p-below {
-  padding-top: 10px;
-  font-size: 14px;
-  color: rgb(245, 119, 119);
-}
-.contact-form-section .kind-of-contact-container .checkbox-container div {
-  display: flex;
-}
-.contact-form-section .kind-of-contact-container .checkbox-container div label {
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-}
-.contact-form-section .kind-of-contact-container .checkbox-container div label input {
-  width: 20px;
-  height: 20px;
-  margin: 5px;
-  display: flex;
-  cursor: pointer;
-}
-.contact-form-section .kind-of-contact-container .button-container {
-  padding-top: 20px;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: flex-end;
-}
-.contact-form-section .kind-of-contact-container .button-container .form-btn {
-  width: 350px;
-  height: 45px;
-  cursor: pointer;
-}
-.contact-form-section .kind-of-contact-container .kind-of-contact-text {
-  display: flex;
-  margin-top: 35px;
-}
-.contact-form-section .kind-of-contact-container .kind-of-contact-text div {
-  padding-right: 20px;
-}
-.contact-form-section .kind-of-contact-container .kind-of-contact-text div i {
-  font-size: 30px;
-  color: white;
-}
-
-.footer {
-  position: static;
-  bottom: 0;
-  z-index: 100;
-  width: 100%;
-  background-color: #b89b7e;
-  border: 1px solid white;
-}
-.footer__item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: white;
-  padding: 0.2em 1em;
-  font-size: 1.8rem;
-  font-weight: bold;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: #000;
-}
-.footer__anchors {
-  display: flex;
-}
-
-@media (max-width: 576px) {
-  div {
-    width: 100px;
+@media (min-width: 768px) {
+  .nav-mobile {
+    display: none;
+  }
+  .nav-desktop {
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    z-index: 100;
+    width: 100%;
+    background-color: #b89b7e;
+    border: 1px solid white;
+  }
+  .nav-desktop__item {
+    display: flex;
+    justify-content: space-between;
+    font-size: 2rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #000;
+    padding: 0 0.8em;
+    font-size: 1.8rem;
+  }
+  .nav-desktop__logo {
+    font-size: 6rem;
+    font-family: "Caveat", cursive;
+    font-weight: normal;
+    text-transform: lowercase;
+    color: rgb(241, 189, 82);
+  }
+  .nav-desktop__logo::first-letter {
+    text-transform: uppercase;
+  }
+  .nav-desktop__anchors {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .nav-desktop__item {
+    transition: color 0.1s;
+  }
+  .nav-desktop__item:hover {
+    color: #ffcc80;
+    color: #f1bd52;
   }
 }
 @media (max-width: 767px) {
@@ -839,51 +413,22 @@ textarea {
     margin: 2rem 0;
     margin-left: 2rem;
   }
+  .slider {
+    border: none;
+    background: none;
+  }
+  .slider__slides img {
+    width: 50%;
+  }
+  .slider i:first-child {
+    left: 0;
+  }
+  .slider i:last-child {
+    right: 0;
+  }
 }
-@media (min-width: 768px) {
-  .nav-mobile {
-    display: none;
-  }
-  .nav-desktop {
-    width: 100vw;
-    position: fixed;
-    top: 0;
-    z-index: 100;
+@media (max-width: 550px) {
+  .slider__slides img {
     width: 100%;
-    background-color: #b89b7e;
-    border: 1px solid white;
-  }
-  .nav-desktop__item {
-    display: flex;
-    justify-content: space-between;
-    font-size: 2rem;
-    font-weight: bold;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: #000;
-    padding: 0 0.8em;
-    font-size: 1.8rem;
-  }
-  .nav-desktop__logo {
-    font-size: 6rem;
-    font-family: "Caveat", cursive;
-    font-weight: normal;
-    text-transform: lowercase;
-    color: rgb(241, 189, 82);
-  }
-  .nav-desktop__logo::first-letter {
-    text-transform: uppercase;
-  }
-  .nav-desktop__anchors {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .nav-desktop__item {
-    transition: color 0.1s;
-  }
-  .nav-desktop__item:hover {
-    color: #ffcc80;
-    color: #f1bd52;
   }
 }/*# sourceMappingURL=main.css.map */
