--- a/scss/medium.scss
+++ b/scss/medium.scss
@@ -113,16 +113,40 @@
       margin-top: 1rem;
       font-size: 3.75rem;
     }
+
     &__text {
       width: 90%;
       margin-left: 2rem;
       padding: 1rem 0;
       font-size: 2.2rem;
     }
+
     &__link {
       margin: 2rem 0;
       margin-left: 2rem;
     }
-
   }
+
+  // slider
+  .slider {
+    border: none;
+    background: none;
+    &__slides {
+      img {
+        width: calc(100% / 2);
+      }
+    }
+
+    i:first-child {
+      left: 0;
+    }
+  
+    i:last-child {
+      right: 0;
+    }
+  }
+
+
+
+
 }
