beginning of work on opinion section(basic html[not all], css)

--- a/css/large.css
+++ b/css/large.css
@@ -44,4 +44,7 @@
     color: #ffcc80;
     color: #f1bd52;
   }
+  .opinion__client-rating {
+    background: none;
+  }
 }/*# sourceMappingURL=large.css.map */
