--- a/css/main.css
+++ b/css/main.css
@@ -140,12 +140,12 @@ a {
 }
 
 .slider {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
+  margin-top: 10rem;
+  margin-bottom: 10rem;
   border: 1px solid white;
   background: rgba(0, 0, 0, 0.4);
 }
-.slider__title {
+.slider__heading {
   margin-top: 1rem;
   display: flex;
   justify-content: center;
@@ -210,12 +210,20 @@ a {
 }
 
 .opinion {
-  margin-top: auto;
-  margin-bottom: 50px;
+  margin-top: 10rem;
+  margin-bottom: 10rem;
   color: rgb(236, 237, 238);
+  border: 1px solid white;
+  background: rgba(0, 0, 0, 0.4);
 }
 .opinion__heading {
-  font-size: 40px;
+  margin-bottom: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Caveat", cursive;
+  font-size: 7rem;
+  color: white;
 }
 .opinion__clients-list {
   margin-top: auto;
@@ -227,15 +235,16 @@ a {
   flex-wrap: wrap;
 }
 .opinion__client-rating {
-  width: 550px;
+  width: 420px;
   height: 70%;
-  margin-right: 50px;
+  margin-right: 10px;
+  margin-left: 10px;
   margin-bottom: 50px;
   padding: 50px;
   padding-bottom: 0px;
   display: flex;
   flex-direction: column;
-  background: rgba(0, 0, 0, 0.15);
+  background: rgba(0, 0, 0, 0.3);
   border: 1px solid #bfa182;
   border-radius: 8%;
 }
@@ -266,6 +275,22 @@ a {
 .opinion__annotation .author {
   color: rgba(0, 0, 0, 0.6);
   color: #bfa182;
+}
+.opinion h3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Caveat", cursive;
+  font-size: 4rem;
+  color: white;
+}
+.opinion__form {
+  margin: 2rem;
+  height: 100px;
+  border: 1px solid white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media (min-width: 768px) {
@@ -313,6 +338,9 @@ a {
   .nav-desktop__item:hover {
     color: #ffcc80;
     color: #f1bd52;
+  }
+  .opinion__client-rating {
+    background: none;
   }
 }
 @media (max-width: 767px) {
@@ -425,6 +453,23 @@ a {
   }
   .slider i:last-child {
     right: 0;
+  }
+  .opinion {
+    margin-top: 2rem;
+    border: none;
+    background: none;
+  }
+  .opinion__heading {
+    margin-bottom: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Caveat", cursive;
+    font-size: 6.5rem;
+    color: white;
+  }
+  .opinion__client-rating {
+    background: rgba(0, 0, 0, 0.3);
   }
 }
 @media (max-width: 550px) {
