--- a/css/medium.css
+++ b/css/medium.css
@@ -126,4 +126,8 @@
   .opinion__client-rating {
     background: rgba(0, 0, 0, 0.3);
   }
+  .form {
+    margin: 0;
+    background: rgba(0, 0, 0, 0.4);
+  }
 }/*# sourceMappingURL=medium.css.map */
