--- a/css/main.css
+++ b/css/main.css
@@ -246,7 +246,7 @@ a {
   flex-direction: column;
   background: rgba(0, 0, 0, 0.3);
   border: 1px solid #bfa182;
-  border-radius: 8%;
+  border-radius: 2.5rem;
 }
 .opinion__stars {
   margin: 0px 0px 40px;
@@ -296,6 +296,13 @@ a {
   width: auto;
   height: auto;
   border: 1px solid #bfa182;
+  border-radius: 2.5rem;
+}
+.form .star {
+  cursor: pointer;
+}
+.form .star:hover {
+  color: #facd19;
 }
 .form__input-container {
   display: flex;
@@ -304,9 +311,11 @@ a {
   padding: 10px;
   width: 100%;
 }
-.form__input-container input {
+.form__input-container input, .form__input-container textarea {
   width: 100%;
   height: 5rem;
+  padding: 1rem;
+  font-size: 2rem;
   border-radius: 1.5rem;
 }
 .form__input-container label {
@@ -322,26 +331,26 @@ a {
 .form__stars i {
   font-size: 3rem;
 }
-.form__opinion input {
-  height: 200px;
+.form__opinion textarea {
+  height: 16rem;
+  resize: none;
 }
 .form__btn {
   position: relative;
-  width: 20rem;
-  height: 10px;
+  width: 18rem;
+  height: 6rem;
+  padding: 2rem 4rem;
   margin-left: 0;
-  padding: 1.5rem 3rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 6rem;
+  font-size: 1.6rem;
   border: 1px solid black;
   background-color: #724e2b;
   color: rgb(236, 237, 238);
   text-transform: uppercase;
   font-weight: bold;
   border-radius: 1rem;
-  font-size: 1.6rem;
   transition: color 0.3s, background-color 0.3s;
   cursor: pointer;
 }
