--- a/scss/main.scss
+++ b/scss/main.scss
@@ -339,11 +339,12 @@ a {
   border: 1px solid $border-color;
   border-radius: 2.5rem;
 
-  .star {
+  .fa-star {
     cursor: pointer;
   }
 
-  .star:hover {
+  .highlight,
+  .highlited {
     color: #facd19;
   }
 
@@ -353,8 +354,6 @@ a {
     margin: 10px;
     padding: 10px;
     width: 100%;
-    // height: 100px;
-    // border: 1px solid yellow;
 
     input, textarea {
       width: 100%;
